creando back end para volver atras de una pagina

--- a/GamesRate/templates/GamesRate/juego_list.html
+++ b/GamesRate/templates/GamesRate/juego_list.html
@@ -20,7 +20,7 @@
 
 <ul>
     {% for juego in juegos %}
-        <li>{{juego}}</li>
+        <li>{{juego}} <a href="{% url 'juegos-detail' juego.id %}"> Detalle </a> </li> 
 
     {% endfor%}
 
