--- a/GamesRate/templates/GamesRate/juego_detail.html
+++ b/GamesRate/templates/GamesRate/juego_detail.html
@@ -8,6 +8,8 @@
 
 <p>
     <br>
+    <h2>Publicado por: {{object.dueño}}</h2>
+    <br>
     {{object.opinion}} -- Estrellas: {{object.estrellas}}
     <br>
     <a href="{% url 'juegos-list'%}"> volver </a>
