--- a/GamesRate/templates/GamesRate/juego_list.html
+++ b/GamesRate/templates/GamesRate/juego_list.html
@@ -20,10 +20,14 @@
 
 <ul>
     {% for juego in juegos %}
-        <li>{{juego}} 
+        <li>
+
+            {{juego}} 
             <a href="{% url 'juegos-detail' juego.id %}"> Detalle </a>
-            <a href="{% url 'juegos-update' juego.id %}"> Actualizar </a>
-            <a href="{% url 'juegos-delete' juego.id %}"> Borrar </a>
+            {% if user.is_authenticated and juego.dueño == user %}
+                <a href="{% url 'juegos-update' juego.id %}"> Actualizar </a>
+                <a href="{% url 'juegos-delete' juego.id %}"> Borrar </a>
+            {% endif %}
         </li> 
 
     {% endfor%}
