--- a/GamesRate/templates/registration/login.html
+++ b/GamesRate/templates/registration/login.html
@@ -1,8 +1,8 @@
 {% extends 'GamesRate/base.html' %}
 
-{% block tittle %}GamesRate/signup{% endblock %}
+{% block tittle %}GamesRate/login{% endblock %}
 
-{% block titulo %}Registro de Usuario{% endblock %}
+{% block titulo %}Acceso al Sistema{% endblock %}
 
 {% block listado %} 
 
@@ -14,7 +14,7 @@
             {{ field.label_tag }} {{ field }}
         </p>
     {% endfor %}
-    <input type="submit" value="Registarse">
+    <input type="submit" value="Ingresar">
 
 </form>
 
