foto a los juegos

--- a/GamesRate/templates/GamesRate/juego_detail.html
+++ b/GamesRate/templates/GamesRate/juego_detail.html
@@ -3,6 +3,10 @@
 {% block tittle %}Juegos{% endblock %}
 
 {% block titulo %}Opinion de {{object.nombre}}{% endblock %}
+<p>
+    <br>
+    <img src="{{ object.imagen.url }}" width="480px" height="100%">
+</p>
 
 {% block listado %} 
 
