--- a/GamesRate/templates/GamesRate/juego_form.html
+++ b/GamesRate/templates/GamesRate/juego_form.html
@@ -6,7 +6,7 @@
 
 {% block listado %} 
 
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{form.as_p}}
     <input type="submit" value="Guardar">
