--- a/GamesRate/templates/GamesRate/juego_detail.html
+++ b/GamesRate/templates/GamesRate/juego_detail.html
@@ -3,18 +3,24 @@
 {% block tittle %}Juegos{% endblock %}
 
 {% block titulo %}Opinion de {{object.nombre}}{% endblock %}
-<p>
-    <br>
-    <img src="{{ object.imagen.url }}" width="480px" height="100%">
-</p>
+
 
 {% block listado %} 
 
+{% if not object %}
+    <h2>No hay post</h2>
+{% endif %}
+
+
 <p>
     <br>
-    <h2>Publicado por: {{object.dueño}}</h2>
+    {% if object.imagen.url %}
+        <img src="{{ object.imagen.url }}", height="100%", width="360px">
+        <br>
+    {% endif%}
+    <h4>Publicado por: {{object.dueño}} el {{object.creado_el}}</h4>
     <br>
-    {{object.opinion}} -- Estrellas: {{object.estrellas}}
+    <h2>{{object.opinion}} -- Estrellas: {{object.estrellas}}</h2>
     <br>
     <a href="{% url 'juegos-list'%}"> volver </a>
 </p>
