--- a/GamesRate/templates/GamesRate/profile_form.html
+++ b/GamesRate/templates/GamesRate/profile_form.html
@@ -1,8 +1,8 @@
 {% extends 'GamesRate/base.html' %}
 
-{% block tittle %}Juegos{% endblock %}
+{% block tittle %}Perfil{% endblock %}
 
-{% block titulo %}Actualizar Juego{% endblock %}
+{% block titulo %}Profile{% endblock %}
 
 {% block listado %} 
 
