--- a/GamesRate/templates/GamesRate/base.html
+++ b/GamesRate/templates/GamesRate/base.html
@@ -11,7 +11,15 @@
 <header>
     <nav>
         {% if user.is_authenticated %}
-            <a href="{% url 'logout'%}">{{user.username}}  Logout</a>
+            {% if user.profile.imagen %}
+            <a href="{% url 'profile-update' user.profile.id%}">
+                <img src="{{user.profile.imagen.url}}", height="100%", width="36px" style="border-radius: 50%;"> 
+            </a>
+            {% endif %}
+            <a href="{% url 'logout'%}">{{user.username}} Logout</a>
+            <br>
+            <a href="{% url 'mensaje-create'%}">Enviar Mensaje</a>
+            <a href="{% url 'mensaje-list'%}">Ver Mensajes</a>
         {% else %}
             <a href="{% url 'signup'%}">Signup</a>
             <a href="{% url 'login'%}">Login</a>
@@ -19,6 +27,8 @@
         
     </nav>
     <nav>
+        <br>
+        <br>
         <a href="{% url 'juego'  %}"> Inicio </a>
         <a href="{% url 'juegos-create'  %}"> Crear </a>
         <a href="{% url 'juegos-list'  %}"> Buscar </a>
