--- a/GamesRate/templates/GamesRate/mensaje_form.html
+++ b/GamesRate/templates/GamesRate/mensaje_form.html
@@ -1,15 +1,15 @@
 {% extends 'GamesRate/base.html' %}
 
-{% block tittle %}Juegos{% endblock %}
+{% block tittle %}GamesRate{% endblock %}
 
-{% block titulo %}Actualizar Juego{% endblock %}
+{% block titulo %}Enviar Mensaje{% endblock %}
 
 {% block listado %} 
 
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{form.as_p}}
-    <input type="submit" value="Guardar">
+    <input type="submit" value="Enviar">
 </form>
 
 {% endblock %}
