--- a/GamesRate/templates/GamesRate/about.html
+++ b/GamesRate/templates/GamesRate/about.html
@@ -1,6 +1,6 @@
-{% extends 'GamesRate/base.html' %}
+{% extends 'GamesRate/base2.html' %}
 
-{% block listado %} 
+{% block main %} 
     <h1>About ME</h1>
     <p>Soy Axel Molina, hice este curso para adentrarme mas en la programacion
         y lo que intente hacer en este proyecto es un blog donde se puedan subir Opiniones
