--- a/GamesRate/templates/GamesRate/juego_list.html
+++ b/GamesRate/templates/GamesRate/juego_list.html
@@ -1,8 +1,10 @@
-{% extends 'GamesRate/base.html' %}
++{% extends 'GamesRate/base2.html' %}
 
 {% block tittle %}Juegos{% endblock %}
 
 {% block titulo %}Buscar Opiniones{% endblock %}
+
+{% block main %}
 
 {% block listado %} 
 
@@ -38,5 +40,7 @@
     {% endfor%}
 
 </ul>
+
+{% endblock %}
 
 {% endblock %}
