--- a/GamesRate/templates/GamesRate/mensaje_list.html
+++ b/GamesRate/templates/GamesRate/mensaje_list.html
@@ -1,10 +1,10 @@
-{% extends 'GamesRate/base.html' %}
+{% extends 'GamesRate/base2.html' %}
 
 {% block tittle %}Juegos{% endblock %}
 
 {% block titulo %}Mensajes{% endblock %}
 
-{% block listado %} 
+{% block main %} 
 
 
 {% if not mensajes %}
