--- a/GamesRate/templates/GamesRate/not_found.html
+++ b/GamesRate/templates/GamesRate/not_found.html
@@ -1,7 +1,3 @@
-{}{% extends 'GamesRate/base.html' %}
+{}{% extends 'GamesRate/base2.html' %}
 
 {% block titulo %}No Existe{% endblock %}
-
-{% block listado %} 
-
-{% endblock %}
