--- a/GamesRate/templates/GamesRate/profile_form.html
+++ b/GamesRate/templates/GamesRate/profile_form.html
@@ -1,10 +1,10 @@
-{% extends 'GamesRate/base.html' %}
+{% extends 'GamesRate/base2.html' %}
 
 {% block tittle %}Perfil{% endblock %}
 
 {% block titulo %}Profile{% endblock %}
 
-{% block listado %} 
+{% block main %} 
 
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
