--- a/GamesRate/templates/registration/login.html
+++ b/GamesRate/templates/registration/login.html
@@ -1,10 +1,10 @@
-{% extends 'GamesRate/base.html' %}
+{% extends 'GamesRate/base2.html' %}
 
 {% block tittle %}GamesRate/login{% endblock %}
 
 {% block titulo %}Acceso al Sistema{% endblock %}
 
-{% block listado %} 
+{% block main %} 
 
 <form method="POST">
     {% csrf_token %}
