--- a/GamesRate/templates/registration/logout.html
+++ b/GamesRate/templates/registration/logout.html
@@ -1,5 +1,5 @@
-{% extends 'GamesRate/base.html' %}
+{% extends 'GamesRate/base2.html' %}
 
-{% block listado %} 
+{% block main %} 
     <h1> Saliste del sistema </h1>
 {% endblock %}
