--- a/GamesRate/templates/GamesRate/mensaje_confirm_delete.html
+++ b/GamesRate/templates/GamesRate/mensaje_confirm_delete.html
@@ -1,10 +1,10 @@
-{% extends 'GamesRate/base.html' %}
+{% extends 'GamesRate/base2.html' %}
 
 {% block tittle %}Borrar-mensaje{% endblock %}
 
 {% block titulo %}Borrar el Mensaje: {{object.id}}?{% endblock %}
 
-{% block listado %} 
+{% block main %} 
 
 <form method="POST">
     {% csrf_token %}
