--- a/GamesRate/templates/registration/signup.html
+++ b/GamesRate/templates/registration/signup.html
@@ -1,10 +1,10 @@
-{% extends 'GamesRate/base.html' %}
+{% extends 'GamesRate/base2.html' %}
 
 {% block tittle %}GamesRate/signup{% endblock %}
 
 {% block titulo %}Registro de Usuario{% endblock %}
 
-{% block listado %} 
+{% block main %} 
 
 <form method="POST">
     {% csrf_token %}
